refactor: Implementando error handling das APIs